--- a/css/styles.css
+++ b/css/styles.css
@@ -21,3 +21,24 @@ body{
   border-radius: 5px;
   box-shadow: 6px 10px 5px 0px rgba(0,0,0,0.75);
 }
+.result{
+  height: 120px;
+}
+.keyboard{
+  height: 400px;
+}
+
+.history{
+  text-align: right;
+  height: 20px;
+  padding-top: 20px;
+  margin: 0 20px;
+  color: grey;
+}
+
+.output{
+  height: 60px;
+  text-align: right;
+  font-size: 30px;
+  margin: 10px 20px;
+}
